RemoteWebDriver driver = new RemoteWebDriver(     URI.create("http://localhost:8888/wd/hub").toURL(),     capabilities );