@@ -1,6 +1,6 @@
 package com.amazon.driver;
 
-import java.net.URL;
+import java.net.URI;
 
 import org.openqa.selenium.remote.DesiredCapabilities;
 import org.openqa.selenium.remote.RemoteWebDriver;
@@ -19,7 +19,7 @@ public class ChromeDriverManager extends DriverManager {
 		try {
 			if (System.getProperty("HUB_HOST") != null) {
 				String host = System.getProperty("HUB_HOST");
-				driver = new RemoteWebDriver(new URL(host), capabilities);
+				driver = new RemoteWebDriver(URI.create(host).toURL(), capabilities);
 			}
 
 		} catch (Exception e) {
